// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LocalizedPrice should render localized currency 1`] = `
<div>
  <span>
    MX$190
     *
  </span>
</div>
`;

exports[`LocalizedPrice should render unlocalized currency 1`] = `
<div>
  $10.00
</div>
`;
